--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="Images\pop_up.png">
+  <link rel="icon" type="image/png" href="Images\Logo.png">
+
 
 </head>
 
 <body>
-
   <header>
     <h1>Welcome to my CV!</h1>
   </header>
@@ -40,9 +40,6 @@
           <li><a href="contact.html" class="button">Contact me</a></li>
         </ul>
       </nav>
-
-      <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
       <main class="seven columns">
         <h4>About me:</h4>
@@ -91,10 +88,9 @@
           est laborum.
           <br> <br>
 
+          <!-- Using iframes to display a YouTube video on the website -->
           <iframe class="responsive-iframe" width="600" height="500" src="https://www.youtube.com/embed/GoQ85cs5fk0"></iframe>
         </p>
-
-
       </article>
     </div>
   </div>
@@ -103,12 +99,14 @@
   <br>
   <br>
   <footer>
+            <!-- Displaying the time and date of the refresh with JavaScript -->
     <h8>The current time and date is:</h8>
     <h8 id="demo"></h8>
     <br>
     <h8>E-mail me with further questions: <a href="mailto:sophiedewinter@live.nl">Click here</a></h8>
   </footer>
 </body>
+<!-- Linking the JavaScript code for the time and date in the footer -->
 <script src="js_date.js"></script>
 
 </html>
