--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,8 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="Images\pop_up.png">
+  <link rel="icon" type="image/png" href="Images\Logo.png">
+
 
 </head>
 
@@ -123,63 +124,65 @@
           </tr>
           <tr>
             <td>Python</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>sql</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>html</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>css</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>JavaScript</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>ArcGIS Pro</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>ArcGIS Online products</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>QGIS</td>
-            <td><img src="Images\round3.png" alt="Score 3/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9898;&#9898;</td>
           </tr>
           <tr>
             <td>Avenza MAPublisher</td>
-            <td><img src="Images\round3.png" alt="Score 3/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9898;&#9898;</td>
           </tr>
           <tr>
             <td>Microsoft Word, Excel, PowerPoint</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>Adobe Illustrator, Indesign, XD</td>
-            <td><img src="Images\round4.png" alt="Score 4/5" class="score"></td>
+            <td>&#9899;&#9899;&#9899;&#9899;&#9898;</td>
           </tr>
           <tr>
             <td>Adobe Premiere Pro</td>
-            <td><img src="Images\round3.png" alt="Score 3/5" class="score"></td>
+            <td>&#9899;&#9899;&#9898;&#9898;&#9898;</td>
           </tr>
         </table>
       </aside>
     </div>
   </div>
   <footer>
+        <!-- Displaying the time and date of the refresh with JavaScript -->
     <h8>The current time and date is:</h8>
     <h8 id="demo"></h8>
     <br>
     <h8>E-mail me with further questions: <a href="mailto:sophiedewinter@live.nl">Click here</a></h8>
   </footer>
 </body>
+<!-- Linking the JavaScript code for the time and date in the footer -->
 <script src="js_date.js"></script>
 
 </html>
