--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="Images/Logo.png">
+  <link rel="icon" type="image/png" href="Images\Logo.png">
 
 
 </head>
