--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
   <title>Sophie's CV</title>
   <meta name="description" content="Take a look at Sophie's CV, to see if we are a good fit!">
   <meta name="author" content="Sophie de Winter">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
